# armake

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  sign.c
